[package]
name = "shahi"
version = "0.1.0"
edition = "2021"

[dependencies]
networks = { path = "src/networks" }
server = { path = "./src/server" }
account= { path = "./src/account" }
transaction= { path = "./src/transaction" }
block= { path = "./src/block" }
blockchain= { path = "./src/blockchain" }
mempool = {path="./src/mempool"}
db = { path = "./src/db" }
chrono = "0.4.39"
libp2p = { version = "0.55.0", features = [
  "tcp",
  "websocket",
  "noise",
  "yamux",
] }
log = "0.4.25"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
secp256k1 = { version = "0.30.0", features = ["rand", "hashes"] }
serde = "1.0.217"
serde_json = "1.0.137"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
rustls = "0.23.23"
tracing-subscriber = "0.3"
tracing = "0.1.41"
tempfile = "3.17.1"
bincode = "2.0.0"
rocksdb = "0.23.0"
gossipsub = "0.27.0"
thiserror = "2.0.11"
