[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = "4.5.29"
h3 = "0.0.6"
h3-quinn = "0.0.7"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
quinn = "0.11.6"
rand = "0.9.0"
rustls = { version = "0.23.23", features = ["ring"] }
rustls-pemfile = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
tokio-rustls = "0.26.1"
tracing = "0.1.41"
rcgen = "0.13.2"
bytes = "1.10.0"
http = "1.2.0"

db = { path = "../db" }
